create an login form for team members

--- a/src/Style/index.css
+++ b/src/Style/index.css
@@ -76,6 +76,10 @@ a {
 
 }
 
+section {
+    margin: 10rem 0;
+}
+
 .main-btn {
     padding: 1rem 2rem;
     background-color: var(--second-font-color);
