--- a/src/Pages/Admin/components/Dashboard/components/Home/components/Slogan/style/slogan.css
+++ b/src/Pages/Admin/components/Dashboard/components/Home/components/Slogan/style/slogan.css
@@ -1,25 +1,6 @@
-.popup-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.popup-content {
-    background-color: #fff;
-    width: 300px;
-    padding: 20px;
-}
-
-.popup-content h2 {
-    margin-top: 0;
-}
-
-.popup-content p {
-    margin-bottom: 20px;
-}
+    .slogan-section .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
