--- a/src/Shared/style/main-table.css
+++ b/src/Shared/style/main-table.css
@@ -1,15 +1,81 @@
 .main-table {
     margin: 2rem auto;
+    width: 100%;
 }
 
 .main-table table {
     margin-top: 1rem;
+    width: 100%;
+    border-collapse: collapse;
 }
 
-.main-table table thead th,
+.main-table table thead tr {
+    background-color: var(--main-bg);
+    color: var(--main-font-color);
+    text-align: center;
+    font-weight: bold;
+    transition: var(--main-transition);
+    -webkit-transition: var(--main-transition);
+    -moz-transition: var(--main-transition);
+    -ms-transition: var(--main-transition);
+    -o-transition: var(--main-transition);
+}
+
+.main-table table tbody tr {
+    cursor: pointer;
+    transition: var(--main-transition);
+    -webkit-transition: var(--main-transition);
+    -moz-transition: var(--main-transition);
+    -ms-transition: var(--main-transition);
+    -o-transition: var(--main-transition);
+}
+
+.main-table table tbody tr:nth-child(even):hover {
+    background-color: #ebebeb;
+}
+
+.main-table table tbody tr:nth-child(odd):hover {
+    background-color: var(--main-font-color);
+}
+
+.main-table table tbody tr:nth-child(odd) {
+    background-color: #ebebeb;
+}
+
+
 .main-table table tbody td,
-.main-table table a {
-    color: var(--second-font-color) !important;
+.main-table table thead th {
+    text-align: center;
+    padding: 1rem;
+}
+
+.main-table table tbody td {
+    border-inline: 1px solid #e0e0e0;
+    color: var(--main-bg);
+    font-weight: bold;
+    /* Added padding for better spacing */
+}
+
+.main-table table tbody tr {
+    border-bottom: 1px solid #e0e0e0;
+    color: var(--main-bg);
+}
+
+.main-table table tbody td:first-child {
+    border-left: none;
+}
+
+.main-table table tbody td:last-child {
+    border-right: none;
+}
+
+/* Apply a different style to the last cell */
+.main-table table tbody td:last-child {
+    color: var(--main-font-color);
+    min-width: 150px;
+    /* Set a minimum width */
+    width: auto;
+    /* Set width to auto */
 }
 
 .table-img {
@@ -21,19 +87,6 @@
     margin: 0 auto;
 }
 
-.table-data {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    justify-content: center;
-
-}
-
-/* Optional: Set height for parent containers to 100% */
-.main-table td {
-    height: 50px;
-}
-
 .table-header {
     color: var(--second-font-color);
     display: flex;
@@ -41,3 +94,37 @@
     justify-content: space-between;
 }
 
+@media only screen and (min-width: 768px)and (max-width: 991px) {
+
+    .main-table table thead,
+    .main-table table tbody {
+        display: block;
+        width: 100%;
+    }
+
+    .main-table table thead tr,
+    .main-table table tbody tr {
+        width: 100%;
+        display: block;
+    }
+}
+
+/* Medium screen size */
+@media only screen and (max-width: 991px) {
+    .main-table table {
+        overflow-x: auto;
+        display: block;
+    }
+
+
+    .main-table table thead tr,
+    .main-table table tbody tr {
+        width: 100%;
+    }
+
+    .main-table table tbody tr td,
+    .main-table table thead tr th {
+        flex: 1;
+        min-width: 100px;
+    }
+}
